# SmogDataPipeline

./: Dockerfile  README.md  dev.Dockerfile  pyproject.toml  result.csv
.github/workflows/: ci.yml  run_pipeline.yml
scripts/: build.sh  run_formatters.sh  run_linters.sh  run_unit_tests.sh
smog_data_pipeline/: __init__.py  __main__.py  extractors.py  loaders.py  pipelines.py  transformers.py
smog_data_pipeline/cli/: base.py  smog.py
smog_data_pipeline/pipelines/: base.py  smog.py
tests/: test_loaders.py  test_module.py  test_pipeline.py  test_transformers.py
tests/cassettes/test_pipeline/: test_smog_pipeline.yaml
